# Profit_pykiwoom_AutoTradingBot

./: .$예측알고리즘 순서도2.drawio.bkp  .$주식봇.drawio.dtmp  .$주식봇3_MK2.drawio.bkp  main.py  trade_record.csv  trade_record2.csv  업그레이드 목표  예측알고리즘 순서도.drawio  주식봇.drawio  주식봇2.drawio  주식봇알고리즘_MK2.drawio  주식봇알고리즘_MK3.drawio
0.curr_ver/: csvRecord.py  input_p.py  kiwoom.py  trade_record3.csv
02_37_MAI_USAstock/: _1_main.py
0_curr_ver_2025/: date.py  hogaRecord.py  input_p.py  kiwoom.py  parameter.csv  requirements.txt
1.MAI/: F_getHoga.py  F_getList.py
10.MAI/: 1_main.py  f_getls.py
10_1.MAI/: 1_main.py
10_3.MAI/: 1_main.py
12.MAI/: 1_main.py  f_getls.py
13.MAI/: 1_main.py
15.MAI/: 1_main.py  f_getls.py
16.MAI/: 1_main.py
18.MAI/: 1_main.py
19.MAI/: 1_main.py  test.py
19.MAI copy/: stockManager.py
2.Docs/: .$예측알고리즘 순서도2.drawio.dtmp  .$주식거래 알고리즘.drawio.bkp  .$주식봇2_cp.drawio.bkp  .$주식봇3_MK1.drawio.bkp  mk4.drawio  사람픽토그램.drawio  업그레이드 목표  예측알고리즘 순서도3.drawio  주식봇2.drawio
21.MAI/: 1_main.py  stockManager.py
24_MAI_order_fin_strategy_ongoing copy/: _1_main.py
25.MAI_functionable/: _1_main.py
2_Docs/: .$예측알고리즘 순서도.drawio.bkp  .$예측알고리즘 순서도3.drawio.bkp  .$주식봇.drawio.bkp  main.py  (+8 more)
3_renual_ver_2026/: README.MD  __main__.py  codenameconv.py  date.py  pyproject.toml  업그레이드 목표
3_renual_ver_2026/api/: chejan.py  client.py  realtime.py
3_renual_ver_2026/data/: hoga.py  params.py  record.py  stock_list.py
3_renual_ver_2026/data/csv/: parameter.csv
3_renual_ver_2026/strategy/: base.py
3_renual_ver_2026/utils/: code2name.py  codelist2string.py  time.py
(+251 files in other folders)
